--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "gatsby": "^2.2.9",
+    "develop": "^1.0.0",
+    "gatsby": "^2.13.32",
+    "gatsby-cli": "^2.7.17",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
@@ -13,7 +15,8 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
-    "react-images": "^1.0.0"
+    "react-images": "^1.0.0",
+    "react-router-dom": "^5.0.1"
   },
   "keywords": [
     "gatsby"
